(lang dune 2.7)
(name fadbadml)
(version 0.1.1)

(generate_opam_files true)

(source (github fadbadml-dev/FADBADml))
(license CECILL-C)
(authors "François Bidet" "Ismail Bennani")
(maintainers "fbidet@lix.polytechnique.fr" "ismail.lahkim.bennani@ens.fr")

(package 
    (name fadbadml)
    (synopsis "FADBAD++ for OCaml")
    (description "This library is an OCaml porting of FADBAD++, a software written by Ole Stauning and Claus Bendtsen."))