opam-version: "2.0"
name: "fadbadml"
version: "~dev"
synopsis: "FADBAD++ for OCaml"
maintainer: [
  "francois-bidet <fbidet@lix.polytechnique.fr>"
  "ismailbennani <ismail.lahkim.bennani@ens.fr>"
]
authors: [
  "francois-bidet <fbidet@lix.polytechnique.fr>"
  "ismailbennani <ismail.lahkim.bennani@ens.fr>"
]
license: "CeCILL-C"
homepage: "https://github.com/ismailbennani/FADBADml"
bug-reports: "https://github.com/ismailbennani/FADBADml/issues"
depends: [ "ocaml" { >= "4.08" } "ocamlfind" ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make "byte"] { !ocaml-native }
  [make "opt"] { ocaml-native }
]
install: [make "install"]
dev-repo: "git+https://github.com/ismailbennani/FADBADml"
