opam-version: "2.0"
name: "fadbadml"
version: "0.1.1"
synopsis: "FADBAD++ for OCaml"
maintainer: [
  "francois-bidet <fbidet@lix.polytechnique.fr>"
  "ismailbennani <ismail.lahkim.bennani@ens.fr>"
]
authors: [
  "francois-bidet <fbidet@lix.polytechnique.fr>"
  "ismailbennani <ismail.lahkim.bennani@ens.fr>"
]
license: "CeCILL-C"
homepage: "https://github.com/fadbadml-dev/FADBADml"
bug-reports: "https://github.com/fadbadml-dev/FADBADml/issues"
depends: [
  "ocaml" { >= "4.08" }
  "ocamlfind" {build}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make "lib"]
]
install: [make "install"]
dev-repo: "git+https://github.com/fadbadml-dev/FADBADml"
